# Elite-Fashion

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  scrolling-website-fad442502365796d.js  scrolling-website-fad442502365796d_bg.wasm
.github/workflows/: deploy.yml
frontend/src/: app.rs  config.rs  main.rs
frontend/src/components/: features.rs  footer.rs  gallery.rs  hero.rs  mod.rs  shop.rs  testimonials.rs
frontend/src/components/home/: app.rs  features.css  features.rs  footer.css  footer.rs  gallery.css  gallery.rs  hero.css  hero.rs  mod.rs  navigation.rs  testimonials.css  testimonials.rs
frontend/src/components/shop/: app.rs  dashboard.rs  mod.rs  navigation.rs  profile.rs  shop.css  shop.rs
frontend/src/styles/: global.css
