[package]
name = "scrolling-website"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scrolling-website"
path = "frontend/src/main.rs"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
  "ScrollBehavior",
  "ScrollIntoViewOptions", 
  "ScrollLogicalPosition",
  "Element",
] }
js-sys = "0.3"
wasm-bindgen = "0.2"
